# NeuroFrame-analysis

./: .gitignore  main.py  pyproject.toml
scripts/: group_brain_skull_holes.py  group_input_alignment.py  overlay_view.py
src/neuroframe_analysis/: __init__.py  alignment.py
src/neuroframe_analysis/coregistration_analysis/: __init__.py  holes_plots.py  overlap.py  overlap_plot.py
src/neuroframe_analysis/coregistration_analysis/visualization/: __init__.py  overlay.py
src/neuroframe_analysis/dataclass/: __init__.py
src/neuroframe_analysis/plots/: __init__.py  group_barplot.py  overlay_implot.py  plot_decorators.py
