[project]
name = "neuroframe-analysis"
version = "0.1.0"
description = "The package to help you analyse all the data you generate during the atlas construction"
authors = [
    {name = "GuilhermeCF",email = "guilherme.henriquesdacostaferreira@epfl.ch"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "neuroframe_analysis", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
